# OdooCpp

./: .gitmodules  CMakeLists.txt  README.md  Todo.md  main.cpp
src/: client.cpp  client.h  exception.cpp  exception.h  json.h  model.cpp  model.h
tests/: test_model.cpp
